integration_tests/codegen_fail/fail/interface/argument_double_underscored.rs
use juniper::graphql_interface;

#[graphql_interface]
trait Character {
    fn id(&self, __num: i32) -> &str {
        "funA"
    }
}

fn main() {}
